[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/sprites/snake/snake_crawl_01.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/snake/snake_crawl_02.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/snake/snake_crawl_03.png" type="Texture" id=3]
[ext_resource path="res://src/Actors/Snake.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/snake/snake_crawl_04.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 85.601, 32.026 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 81.952, 21.4012 )

[sub_resource type="Animation" id=4]
resource_name = "Default"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Die"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "Player_Detect"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:speed_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3.0 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 987.754, 37.1319 )

[node name="Snake" type="KinematicBody2D"]
scale = Vector2( 0.75, 0.75 )
collision_layer = 4
collision_mask = 2
script = ExtResource( 4 )
speed = Vector2( 200, 900 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 1
speed_scale = 3.0
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 19.238 )
shape = SubResource( 2 )

[node name="StomDetector" type="Area2D" parent="."]
modulate = Color( 1, 0.0117647, 0.0117647, 1 )
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="StomDetector"]
position = Vector2( -0.319631, -26.3778 )
shape = SubResource( 3 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
position = Vector2( -1.71893, 17.8054 )
scale = Vector2( 21.7464, 4.44834 )
process_parent = true
physics_process_parent = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Default"
anims/Default = SubResource( 4 )
anims/Die = SubResource( 5 )
anims/Player_Detect = SubResource( 7 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 0.750285, 14.7065 )
shape = SubResource( 6 )
[connection signal="body_entered" from="StomDetector" to="." method="_on_StomDetector_body_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
